examples/test/testpolicy3657.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3657
  namespace: namespace398
spec:
  podSelector:
    matchLabels:
      key18: value8
      key29: value4
      key21: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value4
      podSelector:
        matchLabels:
          key39: value29
          key47: value40
